<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/name" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="textPersonName"
                android:hint="@string/etName" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvMobile"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/mobile" />

                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:hint="@string/etMobile" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvPax"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/pax" />

                <EditText
                    android:id="@+id/etpax"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:hint="@string/etPax" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datetime" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_height="wrap_content" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:timePickerMode="spinner"
                android:calendarViewShown="false"
                android:layout_height="wrap_content" />

        </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Smoking area" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />


        </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>
